:white_check_mark: 修改 支持 Java 24 的 Gradle 版本